[package]
name = "hyperlane-cosmos-modules"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
derive-new.workspace = true
eyre.workspace = true
futures-util.workspace = true
hex.workspace = true
num.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tendermint-rpc = { version = "0.33.0", features = ["http-client"] }
thiserror.workspace = true
tokio.workspace = true
tracing-futures.workspace = true
tracing.workspace = true
url.workspace = true

hyperlane-core = { path = "../../hyperlane-core" }
num-traits.workspace = true

[dev-dependencies]
tokio-test.workspace = true