[package]
name = "hyperlane-cosmos-modules"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
derive-new.workspace = true
eyre.workspace = true
futures-util.workspace = true
hex.workspace = true
num.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-futures.workspace = true
tracing.workspace = true
url.workspace = true
tonic = "0.10.0"
prost = "0.12.1"
prost-types = "0.12.1"
cosmrs = { version = "0.14.0", features = ["cosmwasm", "tokio", "grpc", "rpc"] }
sha256 = "1.1.4"

hyperlane-core = { path = "../../hyperlane-core" }
num-traits.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[build-dependencies]
tonic-build = "0.10.0"