[package]
name = "hyperlane-cosmos"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
derive-new.workspace = true
eyre.workspace = true
futures-util.workspace = true
hex.workspace = true
num.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tendermint-rpc = "0.33.0"
thiserror.workspace = true
tokio.workspace = true
tracing-futures.workspace = true
tracing.workspace = true
url.workspace = true

hyperlane-core = { path = "../../hyperlane-core" }
num-traits.workspace = true

[dev-dependencies]
tokio-test.workspace = true